--- a/services/service1/style.css
+++ b/services/service1/style.css
@@ -1,259 +1,441 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
 
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+  margin: 0;
 
-  .heading_container{
-    background-color: black;
-    height: 340px;  
-  }
+  padding: 0;
 
-  .back-mainpage {
-    color: wheat;
-    font-size: 1rem;
-    margin-bottom: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
+
+
+
+
+body {
+
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
+
+
+#heading {
+
+  background-color: black;
+
+  height: 150px;
+
+  padding-block: 40px;
+
+}
+
+
+
+.back-mainpage {
+
+  color: wheat;
+
+  font-size: 1rem;
+
+  margin-bottom: 2rem;
+
+  display: flex;
+
+  justify-content: center;
+
+  align-items: center;
+
+}
+
+
+
+
 
 .back-mainpage:hover {
-    color: yellow;
+
+  color: yellow;
+
 }
 
 
-  .main_title {
-    font-size: xx-large;
-    color: #ffca18;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 800;
-  }
 
-  .top_img {
-    width: 100%;
-    margin-top: 130px;
-  }
-/* CONTENT */
 
-  .section_content{
-    height: auto;
-    margin-top: 118px;
-  }
+.main_title {
 
-  .content_container {
-    margin: 2rem;
-    margin-inline: 40px;
-  }
+  font-size: 40px;
 
-    .content_title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 2rem !important;
-  }
+  color: #ffca18;
 
-  .content_text {
-    font-size: 0.9rem;
-    line-height: 1.2rem;
-    margin: 1rem 0;
-    text-align: justify;
-    display: flex;
-    justify-content: center;
-    text-overflow: hidden;
-    align-items: center;
-  }
+  display: flex;
 
-  .content_texts {
-    margin: 1.5rem 0;  
-  }
+  justify-content: center;
 
-  li {
-    font-size: 0.9rem;
-    line-height: 1rem;
-    margin: 0.5rem 0;
-    text-align: justify;
-    list-style-type: disc;
-  }
+  align-items: center;
 
-/* SERVICES */
-#services{
-height: 770px ;
-background-color: #ffca18;
+  font-weight: 800;
+
 }
-.services_container{
+
+/*
+
+.top_img {
+
   width: 100%;
+
+  margin-top: 130px;
+
+} */
+
+
+
+
+/* content */
+
+
+
+
+.section_content {
+
+  height: auto;
+
+  /* margin-top: 118px; */
+
+  padding-block: 20px;
+
 }
-.services_img {
+
+.content_container {
+
+  margin: 2rem;
+
+  margin-inline: 40px;
+
+}
+
+
+
+
+.content_text {
+
+  font-size: 0.9rem;
+
+  line-height: 1.2rem;
+
+  margin: 1rem 0;
+
+  text-align: justify;
+
+  display: flex;
+
+  justify-content: center;
+
+  text-overflow: hidden;
+
+  align-items: center;
+
+}
+
+.content_text {
+
+  margin: 1.5rem 0;
+
+}
+
+
+
+
+/* services */
+
+#services {
+
+  height: auto;
+
+  padding-block: 20px;
+
+  background-color: #ffca18;
+
+}
+
+.services_container {
+
   width: 100%;
+
 }
-.services_img2{
-    margin-top: 10px;
-    width: 100%;
+
+
+
+
+/* .services_img {
+
+  width: 100%;
+
 }
+
+
+
+
+.services_img2 {
+
+  margin-top: 10px;
+
+  width: 100%;
+
+} */
+
+
+
 
 .services_container h2 {
-text-align: center;
-padding-top: 5%;
-margin-bottom: 60px;
-font-weight: 600;
-position: relative;
+
+  text-align: center;
+
+  padding-top: 5%;
+
+  margin-bottom: 60px;
+
+  font-weight: 600;
+
+  position: relative;
+
 }
+
+
+
 
 .row {
-margin-inline: 40px;
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-grid-gap: 30px;
+
+  margin-inline: 40px;
+
+  display: grid;
+
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+
+  grid-gap: 30px;
+
 }
+
+
+
 
 .service {
-text-align: center;
-padding: 25px 10px;
-border-radius: 5px;
-font-size: 14px;
-cursor: pointer;
-background: transparent;
-transition: transform 0.5s, background 0.5s;
+
+  text-align: center;
+
+  padding: 25px 10px;
+
+  border-radius: 5px;
+
+  font-size: 14px;
+
+  cursor: pointer;
+
+  background: transparent;
+
+  transition: transform 0.5s, background 0.5s;
+
 }
+
+
+
 
 .service i {
-font-size: 40px;
-margin-bottom: 10px;
-color: #2d2a30;
+
+  font-size: 40px;
+
+  margin-bottom: 10px;
+
+  color: #2d2a30;
+
 }
+
+
+
 
 .service h4 {
-font-weight: 600;
-margin-bottom: 8px;
+
+  font-weight: 600;
+
+  margin-bottom: 8px;
+
 }
+
+
+
 
 .service:hover {
-background: #33383b;
-color: white;
-transform: scale(1.05);
+
+  background: #33383b;
+
+  color: white;
+
+  transform: scale(1.05);
+
 }
 
+
+
+
 .service:hover i {
-color: #fff;
+
+  color: #fff;
+
 }
+
+
+
+
 
 /*FOOTER*/
 
+
+
+
 .footer-distributed {
+
   background-color: #2d2a30;
+
   box-sizing: border-box;
+
   widows: 100%;
+
   text-align: left;
+
   font: bold 16px sans-serif;
+
   padding: 50px 50px 60px 50px;
+
   margin-top: 80px;
+
 }
 
-.footer-left{
+
+
+
+.footer-left {
+
   display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  justify-content: space-between;
- }
 
- .footer-distributed h4 {
-  color: #fff;
-  font: normal 36px 'cookie', cursive;
-  margin: 0;
+  flex-direction: row-reverse;
+
+  align-items: center;
+
+  justify-content: space-between;
+
 }
+
+
+
+
+.footer-distributed h4 {
+
+  color: #fff;
+
+  font: normal 36px 'cookie', cursive;
+
+  margin: 0;
+
+}
+
+
+
 
 .footer-distributed h4 span {
+
   color: #e0ac1c;
+
 }
+
+
+
 
 .footer-distributed .footer-links {
+
   color: #fff;
+
   margin: 20px 0 12px;
+
 }
+
+
+
 
 .footer-distributed .footer-links a {
+
   display: inline-block;
+
   line-height: 1.8;
+
   text-decoration: none;
+
   color: inherit;
+
 }
+
+
+
 
 .footer-distributed .footer-icons {
+
   margin-top: 25px;
+
 }
+
+
+
 
 .footer-links a:hover {
+
   color: #3f71ea;
+
 }
 
+
+
+
+
+
 /* mobile view */
-@media (max-width: 500px) {
-  .heading_container{
-    height: 260px;  
-  }
 
-  #services{
-    height: 1175px ;
-    }
+@media screen and (max-width: 500px) {
 
-    .row {
-      /* margin: 10px; */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+  #heading {
 
-      }
-  .footer-distributed .footer-left{
-      display: block;
-      width: 100%;
-      margin-bottom: 40px;
-      text-align: certer;
-  }
-} 
-
-/* tablet view */
-@media (width: 820px ) {
-  .heading_container{
-    height: 290px;  
-  }
-
-
-  .section_content{
     height: 150px;
-    margin-top: 100px;
+
   }
 
-  .content_container {
-    margin: 2rem;
-    margin-inline: 40px;  
+
+
+
+
+
+  .row {
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+
+    justify-content: center;
+
+
+
+
   }
-   
 
-  #services{
-    height: 1175px ;
-    }
 
-    .row {
-      /* margin: 10px; */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
 
-      }
+
   .footer-distributed .footer-left {
-      display: block;
-      width: 100%;
-      margin-bottom: 40px;
-      text-align: certer;
-  }
-} 
 
- 
+    display: block;
+
+    width: 100%;
+
+    margin-bottom: 40px;
+
+    text-align: certer;
+
+  }
+
+}
