--- a/services/service3/style.css
+++ b/services/service3/style.css
@@ -388,6 +388,20 @@ body {
 
 }
 
+@media screen and (max-width: ) {
+  .footer-distributed .footer-left {
+
+    display: block;
+
+    width: 100%;
+
+    margin-bottom: 40px;
+
+    text-align: certer;
+
+  }
+}
+
 
 
 
