--- a/style.css
+++ b/style.css
@@ -9,8 +9,19 @@
 
   .nav-bar {
     width: 100%;
-    height: 450px;
-    background-color: #000;
+    height: 80vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3),transparent), url(images/bg.avif);
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .nav-bar .waves{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
   }
 
   .social-icons {
@@ -53,8 +64,14 @@
   .intro-part {
     height: auto;
     margin-top: 118px;
-    background-color: #ffca18;
+    background-image: url(/images/ab.jpg);
   }
+.back-video{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: ;
+}
 
 
   .intro-heading {
@@ -125,14 +142,14 @@
 
 .card-text-2 {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 0;
  -webkit-box-orient: vertical;
  overflow: hidden;
 }
 
 .card-text-3 {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 0;
  -webkit-box-orient: vertical;
  overflow: hidden;
 }
@@ -167,7 +184,7 @@
   }
 
   footer {
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
 }
 
